--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,6 +7,7 @@
 <body>
   <p>lit</p>
   <br>
-  <app-registration>this is the registration file</app-registration>
+  <app-registrationpage>this is the registration page</app-registrationpage>
+  <app-loginpage>this is the login page</app-loginpage>
 </body>
 </html>
