--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,21 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+
+  <title>Kreygasm</title>
 </head>
 <body>
-  <p>lit</p>
-  <br>
-  <app-registrationpage>this is the registration page</app-registrationpage>
-  <app-loginpage>this is the login page</app-loginpage>
+  <h1 class="jumbotron">Homepage</h1>
+  <div id="tab">
+    <p>bruh its 1 am</p>
+    <app-registrationpage><button>this is the registration page</button></app-registrationpage>
+    <app-loginpage>this is the login page</app-loginpage>    
+  </div>
+  <div id="container">
+
+  </div>
+
 </body>
 </html>
+
+
