--- a/frontend/src/app/registrationpage/registrationpage.component.html
+++ b/frontend/src/app/registrationpage/registrationpage.component.html
@@ -8,8 +8,17 @@
     <script src="RegistrationPage.js" defer></script>
 </head>
 <body>
+  <button
+    (click) = 'buttonClicked()'>
+
+    Registration
+
+  </button>
+  <div 
+  [hidden]="hideContent">
+
     <form id = 'form'>
-        <h1 class='jumbotron'>REGISTRATION</h1>
+        <h1 class='jumbotron'>Registration</h1>
         <div class="form-group">
         <!-- username -->
           <label for="exampleInputEmail1">username</label>
@@ -33,10 +42,11 @@
         </div>
         <button type="submit" id ='submit' class="btn btn-primary" aria-required="true">Submit</button>
       </form>
-      
+    
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
+  </div>
+  </body>
 </html>
