--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,14 +7,11 @@
 <body>
   <h1 class="jumbotron">Homepage</h1>
   <div id="tab">
-    <p>bruh its 1 am</p>
-    <app-registrationpage><button>this is the registration page</button></app-registrationpage>
-    <app-loginpage>this is the login page</app-loginpage>    
+    <app-registrationpage class="btn"><button>this is the registration page</button></app-registrationpage>
+    <br>
+    <app-loginpage class="btn">this is the login page</app-loginpage>    
   </div>
-  <div id="container">
-
-  </div>
-
+  <div id="container"></div>
 </body>
 </html>
 
