--- a/frontend/src/app/components/loginpage/loginpage.component.html
+++ b/frontend/src/app/components/loginpage/loginpage.component.html
@@ -23,14 +23,14 @@
        <!-- email -->
         <div class="form-group">
             <label for="exampleInputEmail1">Email or Username</label>
-            <input type="text" class="form-control" id="email/user" aria-describedby="emailHelp" required>
+            <input #username type="text" class="form-control" id="email/user" aria-describedby="emailHelp" required>
           </div>
         <!-- password -->
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="password" pattern='.{5,}' required title = 'please enter your password' required>
+          <input #password type="password" class="form-control" id="password" pattern='.{5,}' required title = 'please enter your password' required>
         </div>
-        <button type="submit" id ='submit' class="btn btn-primary" aria-required="true">Login</button>
+        <button type="submit" id ='submit' class="btn btn-primary" aria-required="true" (click)='loginClicked(password.value, username.value, $event)'>Login</button>
       </form>
     </div>
 
