--- a/frontend/src/app/components/registrationpage/registrationpage.component.html
+++ b/frontend/src/app/components/registrationpage/registrationpage.component.html
@@ -22,17 +22,17 @@
         <div class="form-group">
         <!-- username -->
           <label for="exampleInputEmail1">username</label>
-          <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="joblo123" required>
+          <input #username type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="joblo123" required>
         </div>
         <!-- password -->
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="password" pattern='.{5,}' required title = '5 or more characters' required>
+          <input #password type="password" class="form-control" id="password" pattern='.{5,}' required title = '5 or more characters' required>
         </div>
         <!-- email -->
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="name@example.com" required>
+            <input #email type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="name@example.com" required>
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
         <!-- checkbox -->
@@ -40,7 +40,7 @@
           <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
-        <button type="submit" id ='submit' class="btn btn-primary" aria-required="true">Submit</button>
+        <button type="submit" id ='submit' class="btn btn-primary" aria-required="true" (click)="registerClicked(password.value, username.value, email.value, $event)">Register</button>
       </form>
     
 
