--- a/frontend/src/app/components/loginpage/loginpage.component.html
+++ b/frontend/src/app/components/loginpage/loginpage.component.html
@@ -18,7 +18,7 @@
 </span>
   <div 
   [hidden]="hideContent">
-    <form id = 'form'>
+    <form id = 'form' (submit)="loginClicked(password.value, username.value, $event)">
         <h1 class='jumbotron'>Login</h1>
        <!-- email -->
         <div class="form-group">
@@ -30,7 +30,7 @@
           <label for="exampleInputPassword1">Password</label>
           <input #password type="password" class="form-control" id="password" pattern='.{5,}' required title="please enter your password" required>
         </div>
-        <button type="submit" id ='submit' class="btn btn-primary" aria-required="true" (click)="loginClicked(password.value, username.value, $event)">Login</button>
+        <button type="submit" id ='submit' class="btn btn-primary" aria-required="true" >Login</button>
       </form>
     </div>
 
