--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,7 +11,9 @@
     <br>
     <app-loginpage class="btn" *ngIf='loginstate'>this is the login page</app-loginpage>    
   </div>
-  <div id="container"></div>
+  <div id="container">
+    <app-chatpage></app-chatpage>
+  </div>
 </body>
 </html>
 
