--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,7 +5,7 @@
   <title>Kreygasm</title>
 </head>
 <body>
-  <h1 class="jumbotron" id="title">Homepage {{ user }}</h1>
+  <h1 id="title">Homepage {{ user }}</h1>
   <div id="tab">
     <app-registrationpage class="btn" *ngIf='loginstate'><button>this is the registration page</button></app-registrationpage>
     <br>
