--- a/frontend/src/app/components/loginpage/loginpage.component.html
+++ b/frontend/src/app/components/loginpage/loginpage.component.html
@@ -16,7 +16,7 @@
 
   </button>
 </span>
-  <div *ngIf="!hideContent"
+  <div *ngIf="!visibility"
  >
     <form id = 'form' (submit)="loginClicked(password.value, username.value, $event)">
         <h1 class='jumbotron'>Login</h1>
