--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -14,9 +14,7 @@
     <app-logout></app-logout>
   </div>
   
-  <div id="container">
-    <app-chatpage></app-chatpage>
-  </div>
+  <app-friendlist></app-friendlist>
 </body>
 </html>
 
