--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,16 +1,14 @@
 body{
-    background-Color: #232323;
+    background-Color: rgb(21, 158, 124);
     margin: 0;
     font-family: "Montserrat","Avenir";
 }
 
-#tab{
-    max-width:600px;
-    margin: 0 auto;
-    background-color: white;
-    height:100px;
-    text-align: center
-    
+#user{
+    max-width: 500px;
+    position: absolute;
+    right: 0;
+    top:0;
 }
 #container{
     margin: 20px auto;
@@ -20,20 +18,7 @@ button:hover{
     color: white;
     background-color: steelblue;
 }
-button{
-    border: none;
-    background: none;
-    text-transform: uppercase;
-    height: 100%;
-    font-weight: 700;
-    color: steelblue;
-    letter-spacing: 1px;
-    font-size: inherit;
-    transition:all 0.3s;
-    -webkit-transition: all 0.6s;
-    -moz-transition: all 0.6s;
-    outline: none;
-}
+
 #title {
     color: white;
 }
