--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,19 +2,29 @@
 <html lang="en">
 <head>
 
-  <title>Kreygasm</title>
+  <title></title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" alt='/socket.io/socket.io.js' defer></script>
 </head>
 <body>
   <h1 id="title">Homepage {{ user }}</h1>
-  <div id="tab">
-    <app-registrationpage class="btn" *ngIf='loginstate'><button>this is the registration page</button></app-registrationpage>
-    <br>
-    <app-loginpage class="btn" *ngIf='loginstate'>this is the login page</app-loginpage>    
-    <br>
-    <app-logout></app-logout>
+
+  <div id="user" class="row">
+    <div *ngIf='loginstate'><app-registrationpage></app-registrationpage></div>
+    <div *ngIf='loginstate'><app-loginpage></app-loginpage></div>    
   </div>
+
+
+    <app-logout></app-logout>
+  
   
   <app-friendlist></app-friendlist>
+
+
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
 
