--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,8 +10,8 @@
   <h1 id="title">Homepage {{ user }}</h1>
 
   <div id="user" class="row">
-    <div *ngIf='loginstate'><app-registrationpage></app-registrationpage></div>
-    <div *ngIf='loginstate'><app-loginpage></app-loginpage></div>    
+    <div class="btn" *ngIf='loginstate'><app-registrationpage></app-registrationpage></div>
+    <div class="btn" *ngIf='loginstate'><app-loginpage></app-loginpage></div>    
   </div>
 
 
