--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,7 +1,7 @@
-body{
-    background-Color: rgb(21, 158, 124);
+#titletab{
+    background-Color: rgba(236, 115, 106, 0.836);
     margin: 0;
-    font-family: "Montserrat","Avenir";
+    font-family: 'Baloo Bhaina 2', cursive;
 }
 
 #user{
@@ -19,7 +19,8 @@ button:hover{
     color: white;
     background-color: steelblue;
 }
-
-#title {
+#title{
     color: white;
 }
+
+
