--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -15,9 +15,8 @@
     margin: 20px auto;
     max-width:1600px;
 }
-button:hover{
-    color: white;
-    background-color: steelblue;
+body{
+    color: black;
 }
 #title{
     color: white;
