--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -4,6 +4,6 @@
 </form>
 
 <div *ngFor='let chatroom of friends, let i = index'>
-    <a style="color: aliceblue;" (click)='openFriend(i)'>{{ chatroom.Users }} {{i}}</a>
-    <div *ngIf='openFriend(i)'> {{ chatroom.Messages }} </div>
+    <a style="color: rgb(0, 0, 0);" (click)='openFriend(i)'>{{ chatroom.Users }} {{i}}</a>
+    <div *ngIf='num === i'> {{ chatroom.Messages }} </div>
 </div>
