--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -6,7 +6,7 @@
 <div *ngFor='let chatroom of friends, let i = index'>
     <a style="color: rgb(0, 0, 0);" (click)='openFriend(i)'>{{ chatroom.Users }} {{i}}</a>
     <div *ngIf='num === i'>
-        <!-- <div *ngFor='let message of chatroom.Messages[i]'>
+        <!-- <div *ngFor='let message of chatroom.messages[i]'>
             {{ message }}
         </div> -->
         <div>lit</div>
