--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,22 +3,34 @@
 <head>
 
   <title></title>
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" alt='/socket.io/socket.io.js' defer></script>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap');
-</style>
+
+  <style>
+  @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap');
+  </style>
+
 </head>
 
 <body>
   <div id="titletab">
-  <h1 id="title">Homepage {{ user }}</h1>
+    <h1>
+      <a href="" style="text-decoration: none;color: white;">
+        TravelNet {{ user }}
+      </a>        
+    </h1>
 
-  <div id="user" class="row">
-    <div class="btn" *ngIf='loginstate'><app-registrationpage></app-registrationpage></div>
-    <div class="btn" *ngIf='loginstate'><app-loginpage></app-loginpage></div>    
+    <div id="user" class="row">
+      <div class="btn" *ngIf='loginstate'>
+        <app-registrationpage></app-registrationpage>
+      </div>
+      <div class="btn" *ngIf='loginstate'>
+        <app-loginpage></app-loginpage>
+      </div>    
+    </div>
   </div>
-</div>
 
   <app-logout></app-logout>
   
@@ -27,8 +39,9 @@
   <app-chatwidget></app-chatwidget> 
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 </body>
 </html>
 
