--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,24 +1,27 @@
-#titletab{
-    background-Color: rgba(236, 115, 106, 0.836);
+#titletab {
+    background-color: rgba(236, 115, 106, 0.836);
     margin: 0;
     font-family: 'Baloo Bhaina 2', cursive;
 }
 
-#user{
+#user {
     max-width: 500px;
     position: absolute;
     margin: 0 10px 0 10px;
     right: 0;
     top:0;
 }
-#container{
+
+#container {
     margin: 20px auto;
     max-width:1600px;
 }
-body{
+
+body {
     color: black;
 }
-#title{
+
+#title {
     color: white;
 }
 
