--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,15 +10,12 @@
 </style>
 </head>
 
-<body>
-  <div id="titletab">
-  <h1 id="title">Homepage {{ user }}</h1>
 
-  <div id="user" class="row">
-    <div class="btn" *ngIf='loginstate'><app-registrationpage></app-registrationpage></div>
-    <div class="btn" *ngIf='loginstate'><app-loginpage></app-loginpage></div>    
-  </div>
-</div>
+<body>
+  <header-navbar (featureSelected)="onNavigate($event)"></header-navbar>
+<div *ngIf='currentFeature === "Registration"'><app-registrationpage></app-registrationpage></div>
+<div *ngIf='currentFeature === "Login"'><app-loginpage></app-loginpage></div>
+
 
   <app-logout></app-logout>
   
