--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -16,8 +16,8 @@
       </ul>
   
       <ul class="navbar-nav" my-2 my-lg-0>
-        <li class="nav-item active">
-          <a class="nav-link" href="#" (click)="onSelect('Register')">Register<span class="sr-only"></span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="#" (click)="onSelect('Registration')">Register<span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" (click)="onSelect('Login')">Login</a>
