--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -1,14 +1,3 @@
 
-<form id='hello'>
-<input #user (keyup.enter)='findFriend_sub(user.value)' id='hello'>
-</form>
 
-<div *ngFor='let chatroom of friends, let i = index'>
-    <a style="color: rgb(0, 0, 0);" (click)='openFriend(i)'>{{ chatroom.Users }} {{i}}</a>
-    <div *ngIf='num === i'>
-        <!-- <div *ngFor='let message of chatroom.messages[i]'>
-            {{ message }}
-        </div> -->
-        <div>lit</div>
-    </div>
-</div>
+<button type="button" class="list-group-item list-group-item-action">friend</button>
