--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -1,3 +1,4 @@
-
-
-<button type="button" class="list-group-item list-group-item-action">friend</button>
+<app-friend
+    *ngFor="let friend of friends"
+    [friend] = "friend">
+</app-friend>
