--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -17,11 +17,11 @@
 
 <body>
   <header-navbar (featureSelected)="onNavigate($event)"></header-navbar>
-<div ><app-registrationpage *ngIf='currentFeature === "Registration"'></app-registrationpage></div>
-<div ><app-loginpage *ngIf='currentFeature === "Login"'></app-loginpage></div>
+<div><app-registrationpage ngStyle='' *ngIf='currentFeature === "Registration"'></app-registrationpage></div>
+<div><app-loginpage *ngIf='currentFeature === "Login"'></app-loginpage></div>
+<div><app-logout></app-logout></div>
 
-
-  <app-logout></app-logout>
+  
   
   <app-friendlist></app-friendlist>
 
