--- a/frontend/src/app/components/friendlist/friend/friend.component.html
+++ b/frontend/src/app/components/friendlist/friend/friend.component.html
@@ -1,1 +1,1 @@
-<button type="button" class="list-group-item list-group-item-action">{{friend.thumbnail+friend.username+friend.status}}</button>
+<button type="button" class="list-group-item list-group-item-action">{{friend.username}}</button>
