--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -16,11 +16,15 @@
       </ul>
   
       <ul class="navbar-nav" my-2 my-lg-0>
+    
         <li class="nav-item">
           <a class="nav-link" href="#" (click)="onSelect('Registration')">Register<span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" (click)="onSelect('Login')">Login</a>
+        </li>
+        <li class="nav-item">
+          <app-logout></app-logout>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
