--- a/frontend/src/app/components/logout/logout.component.html
+++ b/frontend/src/app/components/logout/logout.component.html
@@ -1,1 +1,1 @@
-<button (click)='logout()' *ngIf='session()' class="btn btn-danger">Logout</button>
+<button (click)='logout()' *ngIf='session()' class="btn btn-danger button">Logout</button>
