--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -18,10 +18,10 @@
       <ul class="navbar-nav" my-2 my-lg-0>
     
         <li class="nav-item">
-          <a class="nav-link" href="#" (click)="onSelect('Registration')">Register<span class="sr-only"></span></a>
+          <a class="nav-link" *ngIf='!session' href="#" (click)="onSelect('Registration')">Register<span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" (click)="onSelect('Login')">Login</a>
+          <a class="nav-link" *ngIf='!session' href="#" (click)="onSelect('Login')">Login</a>
         </li>
         <li class="nav-item">
           <app-logout></app-logout>
