--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -19,7 +19,7 @@
   <header-navbar (featureSelected)="onNavigate($event)"></header-navbar>
 <div><app-registrationpage ngStyle='' *ngIf='currentFeature === "Registration"'></app-registrationpage></div>
 <div><app-loginpage *ngIf='currentFeature === "Login"'></app-loginpage></div>
-
+<div><app-map></app-map></div>
 
 
 
