--- a/frontend/src/app/components/registrationpage/registrationpage.component.html
+++ b/frontend/src/app/components/registrationpage/registrationpage.component.html
@@ -1,5 +1,5 @@
 <div *ngIf='!session'>
-    <form id = 'form' (submit)="registerClicked(password.value, username.value, email.value, $event)">
+    <form id='form' (submit)="registerClicked(password.value, username.value, email.value)">
         <h1 class='jumbotron'>Registration</h1>
         <div class="form-group">
         <!-- username -->
@@ -23,5 +23,5 @@
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
         <button type="submit" id ='submit' class="btn btn-primary" aria-required="true">Register</button>
-      </form>
+    </form>
 </div>
