--- a/frontend/src/app/components/map/map.component.html
+++ b/frontend/src/app/components/map/map.component.html
@@ -1,2 +1,2 @@
 
-<img *ngIf="session" src="https://www.wallpapersin4k.org/wp-content/uploads/2017/04/Beautiful-World-Map-Wallpaper-2.png" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
+<img *ngIf="session" src="https://www.wallpapersin4k.org/wp-content/uploads/2017/04/Beautiful-World-Map-Wallpaper-2.png" class="mx-auto d-block rounded" alt="">
