--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -1,4 +1,4 @@
-<div class='right' id="friendlist" *ngIf='session' >
+<div class='container-xs-12 right' id="friendlist" *ngIf='session' >
     <app-friend
         *ngFor="let friend of friends"
         [friend] = "friend">
