--- a/frontend/src/app/components/friendlist/friend/friend.component.html
+++ b/frontend/src/app/components/friendlist/friend/friend.component.html
@@ -1,1 +1,4 @@
-<button type="button" class="list-group-item list-group-item-action">{{friend.roomName}}</button>
+<button type="button" class="list-group-item list-group-item-action"
+(click)='toggleChatWidget(friend)'>
+    {{friend.roomName}}
+</button>
