--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,6 +8,7 @@
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap');
     </style>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet'/>
   </head>
 
   <body>
