--- a/frontend/src/app/components/loginpage/loginpage.component.html
+++ b/frontend/src/app/components/loginpage/loginpage.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf='!session'>
+<div *ngIf='!session' id="slot">
     <form id = 'form' (submit)="loginClicked(password.value, username.value, $event)">
         <h1 class='jumbotron'>Login</h1>
        <!-- email -->
