--- a/frontend/src/app/components/map/map.component.html
+++ b/frontend/src/app/components/map/map.component.html
@@ -1,6 +1,3 @@
-
-<!-- <img *ngIf="session" src="https://www.wallpapersin4k.org/wp-content/uploads/2017/04/Beautiful-World-Map-Wallpaper-2.png" class="mx-auto d-block rounded" alt=""> -->
-
-<div id="mapbox">
-
-</div>
+<!-- <div id="mapbox"> -->
+    
+<!-- </div> -->
