--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,8 +11,14 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet'/>
   </head>
 
-  <body>
+  <body scroll="no" style="overflow: hidden">
+
+
+
+
     <header-navbar (featureSelected)="onNavigate($event)"></header-navbar>
+
+
     <div><app-registrationpage ngStyle='' *ngIf='currentFeature === "Registration"'></app-registrationpage></div>
     <div><app-loginpage *ngIf='currentFeature === "Login"'></app-loginpage></div>
     <div><app-map></app-map></div>
