--- a/frontend/src/app/components/registrationpage/registrationpage.component.html
+++ b/frontend/src/app/components/registrationpage/registrationpage.component.html
@@ -1,4 +1,4 @@
-<div *ngIf='!session'>
+<div *ngIf='!session' id="slot">
 <form id='form' (submit)="registerClicked(password.value, username.value, email.value)">
         <h1 class='jumbotron'>Registration</h1>
         <div class="form-group">
