--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -21,7 +21,7 @@
 
     <div><app-registrationpage ngStyle='' *ngIf='currentFeature === "Registration"'></app-registrationpage></div>
     <div><app-loginpage *ngIf='currentFeature === "Login"'></app-loginpage></div>
-    <div><app-map></app-map></div>
+    <!-- <div><app-map></app-map></div> -->
 
     
     <app-friendlist></app-friendlist>
