--- a/frontend/src/app/components/map/map.component.html
+++ b/frontend/src/app/components/map/map.component.html
@@ -1,4 +1,2 @@
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet'/>
-<div id="mapbox">
-    
-</div>
+<div id="mapbox"></div>
