--- a/frontend/src/app/components/chatwidget/chatwidget.component.scss
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.scss
@@ -1,11 +1,12 @@
-.container{
-    position: fixed;
-    bottom: 1% ;
-    margin: 1%;
-    padding-bottom: 1%;
-    background-color: rgba(255,255,255, 0.5);
+.widget{
+    // position: fixed;
+    // bottom: 1% ;
+    // margin: 1%;
+    padding: 5%;
+    width: auto;
+    background-color: rgba(255,255,255, 0.8);
 }
 
-label {
-    margin-right: 1%;
+.input {
+    width: auto;
 }
