--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -4,5 +4,7 @@
         *ngFor="let friend of friends"
         [friend] = "friend">
     </app-friend>
-    <input #input type="text" (keyup)="onKey(input.value)" placeholder="Find a Chatroom">
+    <form (submit)='onSubmit(input.value)'>
+        <input #input type="text" (keyup)="onKey(input.value)" placeholder="Find a Chatroom">
+    </form>
 </div>
