--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -5,6 +5,6 @@
         [friend] = "friend">
     </app-friend>
     <form (submit)='onSubmit(input.value)'>
-        <input #input type="text" (keyup)="onKey(input.value)" placeholder="Find a Chatroom">
+        <input #input type="text" (keyup)="onKey(input.value)" placeholder="(submit)=create room">
     </form>
 </div>
