--- a/frontend/src/app/components/registrationpage/registrationpage.component.html
+++ b/frontend/src/app/components/registrationpage/registrationpage.component.html
@@ -1,5 +1,6 @@
-<ng-template #content let-c="close" let-d="dismiss">
 <div *ngIf='!session' class="modal-body">
+  <button (click)=openmodal()>yo</button>
+  
 <form id='form' (submit)="registerClicked(password.value, username.value, email.value)">
         <h1 class='jumbotron'>Registration</h1>
         <div class="form-group">
@@ -26,4 +27,3 @@
         <button type="submit" id ='submit' class="btn btn-primary" aria-required="true">Register</button>
     </form>
 </div>
-</ng-template>
