--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -21,7 +21,7 @@
 
     <div><app-registration ngStyle='' *ngIf='currentFeature === "Registration"'></app-registration></div>
     <div><app-loginpage *ngIf='currentFeature === "Login"'></app-loginpage></div>
-    <!-- <div><app-map></app-map></div> -->
+    <div><app-map></app-map></div>
 
     
     <app-friendlist></app-friendlist>
