--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -19,8 +19,8 @@
     <header-navbar (featureSelected)="onNavigate($event)"></header-navbar>
 
 
-    <div><app-registration ngStyle='' *ngIf='currentFeature === "Registration"'></app-registration></div>
-    <div><app-loginpage *ngIf='currentFeature === "Login"'></app-loginpage></div>
+    <div><app-registration  *ngIf='currentFeature === "Registration"'></app-registration></div>
+    <div><app-login  *ngIf='currentFeature === "Login"'></app-login></div>
     <div><app-map></app-map></div>
 
     
