--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -33,7 +33,7 @@
     bottom: 1%;
     width: auto;
     "
-    *ngIf='session'>
+    *ngIf='sessionState'>
     <app-chatwidget 
     *ngFor='let widget of openChatWidgets.roomNames, let i = index '
     [roomName]="widget"
