--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -1,4 +1,4 @@
-<div class='right' id="friendlist" *ngIf='session' >
+<div class='right' id="friendlist" *ngIf='sessionState' >
     <!-- <button class="btn btn-danger" (click)='session = !session'>hide (one time only)</button> -->
     <app-friend
         *ngFor="let friend of friends"
