--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -25,20 +25,7 @@
   <div><app-map></app-map></div>
 
   
-  <app-friendlist></app-friendlist>
+<div><app-chatsystem></app-chatsystem></div>
 
-  <div class="container" style="
-    position: fixed;
-    right: 11%;
-    bottom: 1%;
-    width: auto;
-    "
-    *ngIf='sessionState'>
-    <app-chatwidget 
-    *ngFor='let widget of openChatWidgets.roomNames, let i = index '
-    [roomName]="widget"
-    [roomId]='openChatWidgets.roomIds[i]'>
-    </app-chatwidget>
-  </div>
 </body>
 </html>
