--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -13,6 +13,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
+        <li class="nav-item">
+          <a class='nav-link' [innerHTML]='username' href="#"></a>
+        </li>
       </ul>
   
       <ul class="navbar-nav" my-2 my-lg-0>
