--- a/frontend/src/app/components/chatsystem/chatsystem.component.html
+++ b/frontend/src/app/components/chatsystem/chatsystem.component.html
@@ -1,15 +1,19 @@
-<app-friendlist></app-friendlist>
 
-<div class="container" style="
-  position: fixed;
-  right: 11%;
-  bottom: 1%;
-  width: auto;
-  "
-  *ngIf='sessionState'>
-  <app-chatwidget 
-  *ngFor='let widget of openChatWidgets.roomNames, let i = index '
-  [roomName]="widget"
-  [roomId]='openChatWidgets.roomIds[i]'>
-  </app-chatwidget>
+<div class="container-fluid">
+
+  <div class="row">
+      <div class="col-sm-10" id="chatroom" style="background-color:blue;" *ngIf='sessionState'>
+        <!-- <app-chatwidget
+        *ngFor='let widget of openChatWidgets.roomNames, let i = index '
+        [roomName]="widget"
+        [roomId]='openChatWidgets.roomIds[i]'>
+        </app-chatwidget> -->
+        <button class="btn btn-danger">omh asfgjdfg</button>
+        <p>hello</p>
+      </div>
+      <div class="col-sm-2" style="background-color: pink;">
+        <app-friendlist></app-friendlist>
+      </div>
+  </div>
 </div>
+
