--- a/frontend/src/app/components/chatsystem/chatsystem.component.html
+++ b/frontend/src/app/components/chatsystem/chatsystem.component.html
@@ -2,16 +2,15 @@
 <div class="container-fluid">
 
   <div class="row">
-      <div class="col-sm-10" id="chatroom" style="background-color:blue;" *ngIf='sessionState'>
-        <!-- <app-chatwidget
+      <div class="col-10 row" id="chatroom" style="background-color:blue;" *ngIf='sessionState'>
+        <div class="col-sm"></div>
+        <app-chatwidget class="ml-auto"
         *ngFor='let widget of openChatWidgets.roomNames, let i = index '
         [roomName]="widget"
         [roomId]='openChatWidgets.roomIds[i]'>
-        </app-chatwidget> -->
-        <button class="btn btn-danger">omh asfgjdfg</button>
-        <p>hello</p>
+        </app-chatwidget>
       </div>
-      <div class="col-sm-2" style="background-color: pink;">
+      <div class="col-2" style="background-color: pink;">
         <app-friendlist></app-friendlist>
       </div>
   </div>
