--- a/frontend/src/app/components/chatwidget/chatwidget.component.scss
+++ b/frontend/src/app/components/chatwidget/chatwidget.component.scss
@@ -3,10 +3,27 @@
     // bottom: 1% ;
     // margin: 1%;
     padding: 5%;
-    width: auto;
+    width: 200px;
+    height: 250px;
     background-color: rgba(255,255,255, 0.8);
+    border: medium;
 }
-
+.space{
+  width: 200px;
+  height: 30px;
+  background-color: rgba(255,255,255, 1);
+}
+ul{
+  text-align: left;
+  padding-left: 0em !important
+}
 .input {
-    width: auto;
+  bottom: 2%;
+  position: fixed;
+  width: 175px;
+}
+#chatbody{
+overflow-y: auto;
+display: flex;
+flex-direction:column-reverse ;
 }
