--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -22,7 +22,7 @@
 
   <div><app-registration  *ngIf='currentFeature === "Registration"'></app-registration></div>
   <div><app-login  *ngIf='currentFeature === "Login"'></app-login></div>
-  <!-- <div><app-map></app-map></div> -->
+  <div><app-map></app-map></div>
 
 
 <div id="chatroom"><app-chatsystem></app-chatsystem></div>
