--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -1,9 +1,10 @@
 <div id="friendlist" *ngIf='sessionState' >
     <!-- <button class="btn btn-danger" (click)='session = !session'>hide (one time only)</button> -->
-    <app-friend
-        *ngFor="let friend of friends"
-        [friend] = "friend">
-    </app-friend>
+    <div *ngFor="let friend of friends">
+        <app-friend [friend] = "friend">
+        </app-friend>
+    </div>
+    
     <form (submit)='onSubmit(input.value)'>
         <input #input type="text" (keyup)="onKey(input.value)" placeholder="(submit)=create room">
     </form>
